[gd_scene load_steps=27 format=2]

[ext_resource path="res://images/player/player2.png" type="Texture" id=1]
[ext_resource path="res://DynaPuff-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/player/player1.png" type="Texture" id=3]
[ext_resource path="res://images/player/player12.png" type="Texture" id=4]
[ext_resource path="res://images/player/player5.png" type="Texture" id=5]
[ext_resource path="res://images/player/player4.png" type="Texture" id=6]
[ext_resource path="res://images/player/player3.png" type="Texture" id=7]
[ext_resource path="res://images/player/player11.png" type="Texture" id=8]
[ext_resource path="res://images/player/player10.png" type="Texture" id=9]
[ext_resource path="res://images/player/player13.png" type="Texture" id=10]
[ext_resource path="res://images/player/player8.png" type="Texture" id=11]
[ext_resource path="res://images/player/player6.png" type="Texture" id=12]
[ext_resource path="res://images/player/player7.png" type="Texture" id=13]
[ext_resource path="res://images/player/player9.png" type="Texture" id=14]
[ext_resource path="res://scripts/Shop.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 65
outline_size = 8
outline_color = Color( 1, 0.960784, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.254902, 0.172549, 0.368627, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color( 0, 0, 0, 0.733333 )
shadow_size = 9
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.392157, 0.858824, 0.94902, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.12549, 0.0235294, 0.0431373, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.835294, 0.94902, 0.392157, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.12549, 0.0235294, 0.0431373, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.94902, 0.392157, 0.392157, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.12549, 0.0235294, 0.0431373, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0156863, 0.454902, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0156863, 0.0627451, 0.184314, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.768627, 0.631373, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.411765, 0.0980392, 0.0980392, 1 )

[sub_resource type="DynamicFont" id=11]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Shop" type="Node2D"]
script = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1317.0
margin_bottom = 1440.0
color = Color( 0.682353, 0.733333, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 575.486
margin_right = 749.486
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Node2D" parent="."]

[node name="Panel1" type="Panel" parent="Control"]
margin_left = 63.0
margin_top = 76.0
margin_right = 331.0
margin_bottom = 346.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel1"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Control/Panel1"]
margin_left = 29.0
margin_top = 190.0
margin_right = 233.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Control"]
margin_left = 361.0
margin_top = 76.0
margin_right = 629.0
margin_bottom = 346.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel2"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="Control/Panel2"]
margin_left = 51.386
margin_top = 190.0
margin_right = 230.386
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Control"]
margin_left = 667.0
margin_top = 76.0
margin_right = 935.0
margin_bottom = 346.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel3"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="Control/Panel3"]
margin_left = 51.736
margin_top = 190.0
margin_right = 230.736
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="Control"]
margin_left = 971.03
margin_top = 76.0
margin_right = 1239.03
margin_bottom = 346.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel4"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="Control/Panel4"]
margin_left = 53.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="Control"]
margin_left = 63.0
margin_top = 375.813
margin_right = 331.0
margin_bottom = 645.813
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel5"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="Control/Panel5"]
margin_left = 29.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel6" type="Panel" parent="Control"]
margin_left = 361.0
margin_top = 375.813
margin_right = 629.0
margin_bottom = 645.813
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel6"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="Control/Panel6"]
margin_left = 53.0
margin_top = 190.0
margin_right = 242.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel7" type="Panel" parent="Control"]
margin_left = 667.0
margin_top = 375.813
margin_right = 935.0
margin_bottom = 645.813
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel7"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="Control/Panel7"]
margin_left = 37.036
margin_top = 190.0
margin_right = 252.036
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel8" type="Panel" parent="Control"]
margin_left = 971.03
margin_top = 375.813
margin_right = 1239.03
margin_bottom = 645.813
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel8"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="Button" type="Button" parent="Control/Panel8"]
margin_left = 53.0
margin_top = 190.0
margin_right = 252.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel9" type="Panel" parent="Control"]
margin_left = 63.0
margin_top = 675.627
margin_right = 331.0
margin_bottom = 945.627
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel9"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="Control/Panel9"]
margin_left = 29.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel10" type="Panel" parent="Control"]
margin_left = 361.0
margin_top = 675.627
margin_right = 629.0
margin_bottom = 945.627
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel10"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )

[node name="Button" type="Button" parent="Control/Panel10"]
margin_left = 27.0
margin_top = 190.0
margin_right = 242.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel11" type="Panel" parent="Control"]
margin_left = 667.0
margin_top = 679.786
margin_right = 935.0
margin_bottom = 949.786
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel11"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Button" type="Button" parent="Control/Panel11"]
margin_left = 37.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel12" type="Panel" parent="Control"]
margin_left = 971.03
margin_top = 679.786
margin_right = 1239.03
margin_bottom = 949.786
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel12"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Button" type="Button" parent="Control/Panel12"]
margin_left = 51.036
margin_top = 192.5
margin_right = 252.036
margin_bottom = 261.5
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel13" type="Panel" parent="Control"]
margin_left = 63.0
margin_top = 974.078
margin_right = 331.0
margin_bottom = 1244.08
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel13"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 13 )

[node name="Button" type="Button" parent="Control/Panel13"]
margin_left = 29.0
margin_top = 190.0
margin_right = 233.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel14" type="Panel" parent="Control"]
visible = false
margin_left = 361.0
margin_top = 974.078
margin_right = 629.0
margin_bottom = 1244.08
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel14"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Control/Panel14"]
margin_left = 53.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel15" type="Panel" parent="Control"]
visible = false
margin_left = 667.0
margin_top = 974.078
margin_right = 935.0
margin_bottom = 1244.08
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel15"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Control/Panel15"]
margin_left = 53.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel16" type="Panel" parent="Control"]
visible = false
margin_left = 971.03
margin_top = 974.078
margin_right = 1239.03
margin_bottom = 1244.08
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Panel16"]
position = Vector2( 132.936, 100.409 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Control/Panel16"]
margin_left = 53.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control/Panel16"]
margin_left = 53.0
margin_top = 190.0
margin_right = 232.0
margin_bottom = 259.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HScrollBar" type="VScrollBar" parent="."]
margin_left = 1260.0
margin_right = 1288.0
margin_bottom = 635.0
custom_styles/grabber_highlight = SubResource( 7 )
custom_styles/grabber = SubResource( 8 )
custom_styles/scroll_focus = SubResource( 8 )
custom_styles/scroll = SubResource( 9 )
custom_styles/grabber_pressed = SubResource( 10 )
max_value = 630.0
page = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 26.0
margin_right = 195.0
margin_bottom = 69.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 11 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Panel1/Button" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Control/Panel2/Button" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Panel3/Button" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Panel4/Button" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Control/Panel5/Button" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Control/Panel6/Button" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Control/Panel7/Button" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Control/Panel8/Button" to="." method="_on_Butto8n_pressed"]
[connection signal="pressed" from="Control/Panel9/Button" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Control/Panel10/Button" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="Control/Panel11/Button" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Control/Panel12/Button" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Control/Panel13/Button" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Control/Panel14/Button" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Control/Panel15/Button" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Control/Panel16/Button" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Control/Panel16/Button2" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
